[package]
name = "ssr"
version = "0.1.3"
edition = "2021"
authors = ["Hyperview Technologies Inc."]
description = "A simple sensor report generator for Hyperview"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
confy = "0.5.1"
csv = "1.1.6"
dirs = "5.0.0"
env_logger = "0.10.0"
log = "0.4.17"
oauth2 = "4.3.0"
reqwest = { version = "0.11.14", features = ["blocking", "json", "native-tls-vendored"] }
serde = "1.0.152"
serde_json = "1.0.92"
serde_with = "3.0.0"
thiserror = "1.0.38"

[profile.release]
strip = true
