[package]
name = "ssr"
version = "0.1.3"
edition = "2021"
authors = ["Hyperview Technologies Inc."]
description = "A simple sensor report generator for Hyperview"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
confy = "0.6.1"
csv = "1.1.6"
dirs = "6.0.0"
env_logger = "0.11.6"
log = "0.4.17"
oauth2 = { version = "5.0.0", features = ["reqwest-blocking", "rustls-tls"] }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = "1.0.152"
serde_json = "1.0.92"
serde_with = "3.0.0"
thiserror = "2.0.8"

[profile.release]
strip = true
